@@ -1,9 +1,13 @@
 Release 0.6
 -------------------
 
-Detailed change log can be found here:
+Mime4J is a flexible MIME parsing library written in Java. SAX, DOM and pull parsing styles are 
+supported.
 
-http://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310521&styleName=Html&version=12313434
+The 0.6 release brings another round of API enhancements and performace optimizations. There has 
+been a number of notable improvements in the DOM support. MIME stream parser is expected to be
+50% faster when line counting is disabled. Please also note that as of this release requires 
+Java 1.5 compatible runtime.
 
 Notes
 -----
@@ -30,6 +34,11 @@ Notes
    The classes TempStorage, TempPath, TempFile and SimpleTempStorage have been removed.
    [https://issues.apache.org/jira/browse/MIME4J-83]
  * Temporary text body storage for Message parts now defaults to US-ASCII (was ISO-8859-1)
+
+Detailed change log can be found here:
+
+http://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310521&styleName=Html&version=12313434
+
 
 Release 0.5
 -------------------
